fix(style): tweak dropdown style to avoid items being truncated (#184)
Contributes to watson-engagement-advisor/wea-backlog#4696

--- a/src/assets/styles/components/_dropdown.scss
+++ b/src/assets/styles/components/_dropdown.scss
@@ -69,7 +69,7 @@
       }
 
       &:not(.icon) + [uib-dropdown-menu] {
-        width: 100%;
+        min-width: 100%;
       }
     }
 
